<resources>
    <string name="app_name">App Compra y Venta</string>
    <string name="Item_Inicio">Inicio</string>
    <string name="Item_Chats">Chats</string>
    <string name="Item_vender">Vender</string>
    <string name="Item_Mis_Anuncios">Mis Anuncios</string>
    <string name="Item_Cuenta">Cuenta</string>
    <string name="TituloRL">Titulo</string>
    <string name="Ingresar_email">Ingresar con email</string>
    <string name="Ingresar_google">Ingresar con google</string>

    <string name="Txt_login">Login de usuario</string>
    <string name="Et_nombresRegistro">Nombres</string>
    <string name="Et_email">Email</string>
    <string name="Et_password">Password</string>
    <string name="Btn_ingresar">Ingresar</string>
    <string name="Txt_no_cuenta">¿No tienes una cuenta?</string>
    <string name="Txt_registrarme">REGISTRARME</string>

    <string name="Txt_registro">Registro de usuario</string>
    <string name="Et_r_password">Repetir contraseña</string>
    <string name="Btn_regresar">Registrar</string>


    <string name="default_web_client_id">341100105055-bmbenju709j63ah0h23sajqqu65s5ja1.apps.googleusercontent.com</string>
    <!--Perfil de usuario-->
    <string name="Txt_perfil">Perfil de usuario</string>
    <string name="Txt_informacion">Información: </string>
    <string name="Txt_nombres">Nombres: </string>
    <string name="Tv_nombres">Nombres completos</string>
    <string name="Txt_email">Email: </string>
    <string name="Tv_email">email@dominio.com</string>
    <string name="Txt_nacimiento">Fecha de nacimiento: </string>
    <string name="Tv_nacimiento">DD/MM/AAAA</string>
    <string name="Txt_miembro">Miembro desde: </string>
    <string name="Tv_miembro">DD/MM/AAAA</string>
    <string name="Txt_telefono">Teléfono: </string>
    <string name="Tv_telefono">0123456789</string>
    <string name="Txt_estado_cuenta">Estado de cuenta: </string>
    <string name="Tv_estado_cuenta">No verificado</string>

    <string name="TxtOpciones">Opciones</string>
    <string name="Btn_editar_perfil">Editar perfil</string>
    <string name="Btn_cerrar_sesion">Cerrar Sesión</string>

    <!-- Editar pefil -->
    <string name="Txt_editar_perfil">Editar perfil</string>
    <string name="Et_nombres">Nombres completos</string>
    <string name="Et_f_nac">Fecha de nac.</string>
    <string name="Et_fecha_nac">Fecha de nacimiento</string>
    <string name="Cod_tef"> +00 </string>
    <string name="Et_telefono">Teléfono</string>
    <string name="Btn_actualizar">Actualizar</string>

    <!--Crear anuncio-->
    <string name="Et_marca">Marca</string>
    <string name="Categoria">Categoría</string>
    <string name="Condicion">Condición</string>
    <string name="Locacion">Locación</string>
    <string name="Et_precio">Precio</string>
    <string name="Et_titulo">Titulo</string>
    <string name="Et_descripcion">Descripción</string>
    <string name="Btn_crear_anuncio">Crear anuncio</string>

    <!-- Icono del usuario en chats -->
    <string name="item_uid">Uid</string>
    <string name="item_nombre">Nombre</string>
    <string name="item_email">Email</string>

    <!-- Buscar usuario-->
    <string name="tv_sin_Usuario">No hay más usuarios.</string>
    <string name="Et_buscar_usuario">Buscar usuario</string>

    <!-- Mis Anuncios -->
    <string name="tituloAnuncio">Título del Anuncio</string>
    <string name="precioAnuncio">$0.00</string>
    <string name="condicionAnuncio">Condición</string>

    <!-- Comentarios -->
    <string name="UsuarioComentario">Usuario</string>
    <string name="TextoComentario">Este es un comentario de prueba.</string>
    <string name="FechaComentario">00/00/0000</string>

    <!--Chat-->
    <string name="Txt_nombre_usuario">Nombres</string>
    <string name="Et_mensaje_chat">Escriba algo...</string>
    <string name="Tv_tiempo_mensaje">dd/MM/yyyy hh:mm</string>

    <!--Visualizador-->
    <string name="BtnCerrarVisualizador">Cerrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>