<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/Img_Anuncio"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_imagen" />

        <TextView
        android:id="@+id/Tv_Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/Img_Anuncio"
        android:layout_marginStart="10dp"
        android:text="@string/tituloAnuncio"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:maxLines="2"
        android:ellipsize="end"/>

        <TextView
            android:id="@+id/Tv_Precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Tv_Titulo"
            android:layout_toEndOf="@id/Img_Anuncio"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/precioAnuncio"
            android:textColor="#388E3C"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/Tv_Condicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@id/Img_Anuncio"
            android:layout_marginStart="10dp"
            android:text="@string/condicionAnuncio"
            android:textSize="14sp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>